Switch to java.util.Base64